formats index page

--- a/style/app/views/catalog/_home_text.html.erb
+++ b/style/app/views/catalog/_home_text.html.erb
@@ -12,8 +12,7 @@
 </head>
 <body>
   <div class="row">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-10" id="map-back">
+    <div class="col-xs-12" id="map-back">
       <div class="row">
         <div class="col-xs-12">
           <h1 id="title-txt">Welcome to Street Fashion Map</h1>
@@ -22,10 +21,9 @@
       <div class="row">
         <div class="col-xs-12"><h4>This webpage displays postings of photos of street fashion both on a map, and in list form.</h4></div>
       </div>
-      <div id="documents" class="map">
+      <div id="documents" style="height: 200px;" class="map">
         <%= render "map" %>
       </div>
     </div>
-    <div class="col-xs-1"></div>
   </body>
   </html>
