--- a/style/app/views/catalog/_home_text.html.erb
+++ b/style/app/views/catalog/_home_text.html.erb
@@ -10,8 +10,8 @@
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 <script src="jquery.js"></script>
 <style>
-#blacklight-map .leaflet-container {
-  height: 848px;
+.leaflet-container {
+  height: 600px;
 }
 </style>
 </head>
