--- a/style/app/views/_user_util_links.html.erb
+++ b/style/app/views/_user_util_links.html.erb
@@ -11,6 +11,9 @@
   <li>
     <% if has_user_authentication_provider? and current_user %>
       <li>
+        <%= link_to "New Post", new_post_path %>
+      </li>
+      <li>
         <%= link_to t('blacklight.header_links.saved_searches'), saved_searches_path %>
       </li>
     <% end %>
@@ -22,14 +25,14 @@
 <% if has_user_authentication_provider? %>
   <ul class="nav navbar-nav">
     <% if current_user %>
+      <% unless current_user.to_s.blank? -%>
+        <li>
+          <%= link_to current_user.email, edit_user_registration_path %>
+        </li>
+      <% end %>
       <li>
         <%= link_to t('blacklight.header_links.logout'), destroy_user_session_path %>
       </li>
-      <% unless current_user.to_s.blank? -%>
-        <li>
-          <%= link_to current_user, edit_user_registration_path %>
-        </li>
-      <% end %>
     <% else %>
       <li>
         <%= link_to t('blacklight.header_links.login'), new_user_session_path %>
