--- a/style/app/views/_user_util_links.html.erb
+++ b/style/app/views/_user_util_links.html.erb
@@ -11,6 +11,9 @@
   <li>
     <% if has_user_authentication_provider? and current_user %>
       <li>
+        <%= link_to "My Posts", posts_path %>
+      </li>
+      <li>
         <%= link_to "New Post", new_post_path %>
       </li>
       <li>
