--- a/style/app/views/posts/_index_posts.html.erb
+++ b/style/app/views/posts/_index_posts.html.erb
@@ -7,5 +7,11 @@
         <%= link_to "Delete", post_path(p), :class => "pull-right", :method => :delete, :data=> {:confirm => "Are you sure you want to delete this post?"} %>
       </a>
     </div>
+    <div class="panel panel-body">
+      <p><%= p.description %><p>
+      <% if p.photo != ""%>
+        <%= image_tag p.photo %>
+      <% end %>
+    </div>
   </div>
 <% end %>
