adds list view for posts

--- a/style/app/views/_user_util_links.html.erb
+++ b/style/app/views/_user_util_links.html.erb
@@ -5,7 +5,7 @@
   </li>
   <li>
     <% if current_user && current_user.admin? %>
-      <%= link_to "Admin Panel", admin_index_path %>
+      <% link_to "Admin Panel", admin_index_path %>
     <% end %>
   </li>
   <li>
