--- a/style/app/views/catalog/_map.html.erb
+++ b/style/app/views/catalog/_map.html.erb
@@ -1,2 +1,3 @@
 <%= blacklight_map_tag('blacklight-map') {}%>
 <div id="blacklight-map-sidebar"></div>
+<%= javascript_tag "window.map_data = #{@posts}" %>
