adds page titles

--- a/style/app/views/about/index.html.erb
+++ b/style/app/views/about/index.html.erb
@@ -1,3 +1,6 @@
+<head>
+<% content_for :page_title do %>Street Styles - About Us<% end %>
+</head>
 <h1>About</h1>
 <p>
 This is the final project for CS290, Web Development, Winter 2015. It is intended to be used as a place to post pictures of street styles from around the world.
