--- a/style/app/views/admin/index.html.erb
+++ b/style/app/views/admin/index.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :page_title do %>Street Styles - Admin Panel<% end %>
+</head>
+
 <h1>Admin Panel</h1>
 
 <%= link_to "Edit Users", admin_users_path %>
