--- a/style/app/views/catalog/_home_text.html.erb
+++ b/style/app/views/catalog/_home_text.html.erb
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Street Fashion Map</title>
+<% content_for :page_title do %>Street Styles - Home<% end %>
 <link href="stylesheet.css" rel="stylesheet">
 <link href="bootstrap.css" rel="stylesheet">
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12"><h4>This webpage displays postings of photos of street fashion both on a map, and in list form.</h4></div>
+        <div class="col-xs-12"><h4>This webpage displays postings of photos of street fashion in list form.</h4></div>
       </div>
       <div id="documents" class="map">
         <% render "map" %>
