--- a/style/app/views/posts/index.html.erb
+++ b/style/app/views/posts/index.html.erb
@@ -1,3 +1,6 @@
+<head>
+<% content_for :page_title do %>Street Style - My Posts<% end %>
+</head>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
