--- a/style/app/views/_user_util_links.html.erb
+++ b/style/app/views/_user_util_links.html.erb
@@ -1,4 +1,5 @@
 <div class="navbar-right">
+  <% content_for :page_title do %> Street Styles<% end %>
 <ul class="nav navbar-nav">
   <li>
     <%= link_to "About Us", about_us_path %>
