--- a/style/app/views/devise/registrations/new.html.erb
+++ b/style/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,6 @@
+<head>
+<% content_for :page_title do %>Street Styles - Sign Up<% end %>
+</head>
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
