--- a/style/app/views/posts/new.html.erb
+++ b/style/app/views/posts/new.html.erb
@@ -1,3 +1,6 @@
+<head>
+<% content_for :page_title do %>Street Style - New Post<% end %>
+</head>
 <h1>New Post</h1>
 <div class="container">
   <div class="row">
