--- a/style/app/views/_user_util_links.html.erb
+++ b/style/app/views/_user_util_links.html.erb
@@ -31,7 +31,7 @@
     <% if current_user %>
       <% unless current_user.to_s.blank? -%>
         <li>
-          <%= link_to current_user.email, edit_user_registration_path %>
+          <%= link_to current_user.username, edit_user_registration_path %>
         </li>
       <% end %>
       <li>
